Remove public GetSourceId API
The ability to query the source id of any given entity introduces the
opportunity to spoof that owner. This was a leak that had to be closed.
Instead, the query is a boolean that says, "Does this belong to *this*
source."  That is a benign test.

--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -109,6 +109,7 @@ drake_cc_library(
         ":internal_frame",
         ":internal_geometry",
         "//drake/common",
+        "//drake/common:unused",
     ],
 )
 
