Refactoring on GeometryContext
1) GeometryContext provides syntactic sugar for extracting the
   GeometryState.
2) Use GeometryWorld to create GeometryContext.
3) Make GeometryWorld accept GeometryContext instead of
   GeometryStatus. (Including modification of GeometryWorld unit tests.)

Compromises made:

1) GeometryState now generates the source ids; that means to determine if
   a source is registered, it *absolutely* requires a state/context.
2) Overloaded GeometryWorld::GetFrameKinematicsSet - one takes a context
   the other a state. This facilitates the GeometrySystem for interacting
   with the FrameKinematicsSet *before* a context has been generated.
-- The two are related; if World can validate sources on its own, then
   System and World

--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -25,7 +25,10 @@ drake_cc_library(
     name = "geometry_context",
     srcs = ["geometry_context.cc"],
     hdrs = ["geometry_context.h"],
-    deps = ["//drake/systems/framework:leaf_context"],
+    deps = [
+        ":geometry_state",
+        "//drake/systems/framework:leaf_context",
+    ],
 )
 
 drake_cc_library(
@@ -218,8 +221,10 @@ drake_cc_library(
     hdrs = ["test/query_test_utility.h"],
     deps = [
         "@gtest//:main",
+        ":geometry_context",
         ":geometry_engine",
         ":geometry_state",
+        ":geometry_world",
         ":internal_geometry",
         "//drake/common:eigen_matrix_compare",
     ],
