[WIP] Tying new frame kinematics into Geometry[State|World|System]
1. Add new entities to GeometrySystem.
2. Add tests for GeometrySystem.
  - ValidateFrameIds, ValidateFramePoses, SetFramePoses,
    UpdatePosesRecursively, no test for FinalizePoseUpdate -- it's a simple
    call on geometry engine.
  - Velocity tests which expect not-implemented exception.
3. Add new entities to GeometryWorld.  No tests for these simple methods.
   They simply wrap calls on the state.
4. Add new entities to GeometrySystem.
6. Update bouncing ball.
todo

5. Add tests for GeometrySystem.
7. Change FrameIdVector to allow fast index look up.

--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -116,6 +116,7 @@ drake_cc_library(
     srcs = ["geometry_state.cc"],
     hdrs = ["geometry_state.h"],
     deps = [
+        ":frame_kinematics",
         ":frame_kinematics_set",
         ":geometry_engine",
         ":geometry_frame",
@@ -162,7 +163,8 @@ drake_cc_library(
     srcs = ["geometry_world.cc"],
     hdrs = ["geometry_world.h"],
     deps = [
-        ":frame_kinematics_set",
+        ":frame_kinematics",
+        # ":frame_kinematics_set",
         ":geometry_context",
         ":geometry_frame",
         ":geometry_ids",
@@ -252,13 +254,13 @@ drake_cc_googletest(
     ],
 )
 
-drake_cc_googletest(
-    name = "frame_kinematics_set_test",
-    deps = [
-        ":expect_error_message",
-        ":frame_kinematics_set",
-    ],
-)
+# drake_cc_googletest(
+#     name = "frame_kinematics_set_test",
+#     deps = [
+#         ":expect_error_message",
+#         ":frame_kinematics_set",
+#     ],
+# )
 
 drake_cc_googletest(
     name = "geometry_engine_stub_test",
