[WIP] Adding visual materials
THe basic infrastructure for geometry materials

TODO:

1. Provide anchored geometry materials.
2. Apply material to a frame (so that all bodies can inherit).
3. Create material library so that multiple geometries can cheaply share
   the same material.

--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -78,9 +78,19 @@ drake_cc_library(
     srcs = ["geometry_instance.cc"],
     hdrs = ["geometry_instance.h"],
     deps = [
+        ":geometry_material",
         ":shapes",
         "//drake/common",
         "//drake/common:copyable_unique_ptr",
+    ],
+)
+
+drake_cc_library(
+    name = "geometry_material",
+    srcs = ["geometry_material.cc"],
+    hdrs = ["geometry_material.h"],
+    deps = [
+        "//drake/common",
     ],
 )
 
@@ -182,6 +192,7 @@ drake_cc_library(
     deps = [
         ":geometry_ids",
         ":geometry_index",
+        ":geometry_material",
         "//drake/common",
     ],
 )
