[WIP] Reworking GeometrySystem
1. Update GeometrySystem documentation.
2. Introduce QueryHandle (adding it to bazel build).
3. Update interface to use QueryHandle
TODO:
4. Update bouncing ball to new interface - debug algebraic loop.

--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -132,7 +132,10 @@ drake_cc_library(
 drake_cc_library(
     name = "geometry_system",
     srcs = ["geometry_system.cc"],
-    hdrs = ["geometry_system.h"],
+    hdrs = [
+        "geometry_system.h",
+        "query_handle.h",
+    ],
     deps = [
         ":geometry_context",
         ":geometry_instance",
