Making GeometrySystem (and ecosystem) symbolic::Expression friendly
1. In some cases, simply add an explicit instantiation on the Expression
   scalar type.
2. Remove the template from GeometryInstance; it's pose is constant and
   doesn't need to be more than that.
   - Related: getting the pose of geometry in its parent frame returns
   a const isometry.
3. Correct some engine issues:
   - plane distance is now templated.

--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -49,6 +49,7 @@ drake_cc_library(
         ":geometry_query_results",
         "//drake/common",
         "//drake/common:copyable_unique_ptr",
+        "//drake/common:symbolic",
     ],
 )
 
@@ -125,6 +126,7 @@ drake_cc_library(
         ":internal_frame",
         ":internal_geometry",
         "//drake/common",
+        "//drake/common:symbolic",
         "//drake/common:unused",
     ],
 )
