[WIP] Initial commit; stolen from stiction evaluation branch
1. This is the original, simple system that simply caches.

TODO:
2. Connect it back into the lift test.
3. Add python script for creating graphs.

Further development:
1. Modify it to include a cache of contact so that c_i and v_i+1 are
   compared.
2. Add "write to file" functionality.
3. Extend output to include body:geometry_i names. (modify script).
4. Construct with filters -- only track specific body pairs.

--- a/drake/multibody/rigid_body_plant/BUILD
+++ b/drake/multibody/rigid_body_plant/BUILD
@@ -35,6 +35,16 @@ drake_cc_library(
 )
 
 drake_cc_library(
+    name = "compliant_stiction_logger",
+    srcs = ["compliant_stiction_logger.cc"],
+    hdrs = ["compliant_stiction_logger.h"],
+    deps = [
+        ":compliant_contact_model",
+        "//drake/systems/framework:leaf_system",
+    ],
+)
+
+drake_cc_library(
     name = "rigid_body_plant",
     srcs = [
         "kinematics_results.cc",
