--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -46,9 +46,9 @@ drake_cc_library(
         ":geometry_index",
         ":geometry_instance",
         ":geometry_query_inputs",
-        ":geometry_query_results",
         "//drake/common",
         "//drake/common:copyable_unique_ptr",
+        "//drake/geometry/query_results:penetration_as_point_pair",
     ],
 )
 
@@ -102,13 +102,6 @@ drake_cc_library(
         ":geometry_ids",
         ":geometry_index",
     ],
-)
-
-drake_cc_library(
-    name = "geometry_query_results",
-    srcs = [],
-    hdrs = ["geometry_query_results.h"],
-    deps = ["//drake/common"],
 )
 
 drake_cc_library(
@@ -171,9 +164,9 @@ drake_cc_library(
         ":geometry_ids",
         ":geometry_instance",
         ":geometry_query_inputs",
-        ":geometry_query_results",
         ":geometry_state",
         "//drake/common",
+        "//drake/geometry/query_results:penetration_as_point_pair",
     ],
 )
 
@@ -230,13 +223,13 @@ drake_cc_library(
     srcs = ["test/query_test_utility.cc"],
     hdrs = ["test/query_test_utility.h"],
     deps = [
+        "@gtest//:without_main",
         ":geometry_context",
         ":geometry_engine",
         ":geometry_state",
         ":geometry_world",
         ":internal_geometry",
         "//drake/common:eigen_matrix_compare",
-        "@gtest//:without_main",
     ],
 )
 
