--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -173,7 +173,7 @@ drake_cc_library(
 
 drake_cc_library(
     name = "internal_frame",
-    srcs = [],
+    srcs = ["internal_frame.cc"],
     hdrs = ["internal_frame.h"],
     deps = [
         ":geometry_ids",
