--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -1,12 +1,12 @@
 # -*- python -*-
 # This file contains rules for Bazel; see drake/doc/bazel.rst.
 
-load("//tools:cpplint.bzl", "cpplint")
 load(
     "//tools:drake.bzl",
     "drake_cc_googletest",
     "drake_cc_library",
 )
+load("//tools:lint.bzl", "add_lint_tests")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -133,7 +133,6 @@ drake_cc_library(
     ],
     deps = [
         ":geometry_context",
-        ":geometry_instance",
         ":geometry_state",
         ":geometry_world",
         "//drake/common",
@@ -190,9 +189,6 @@ drake_cc_library(
         ":geometry_ids",
         ":geometry_index",
         ":geometry_material",
-        "//drake/common",
-        "//drake/geometry/query_results:penetration_as_point_pair",
-        "//drake/systems/framework",
     ],
 )
 
@@ -304,4 +300,4 @@ drake_cc_googletest(
     deps = [":identifier"],
 )
 
-cpplint()
+add_lint_tests()
