--- a/drake/geometry/query_results/BUILD
+++ b/drake/geometry/query_results/BUILD
@@ -1,12 +1,12 @@
 # -*- python -*-
 # This file contains rules for Bazel; see drake/doc/bazel.rst.
 
-load("//tools:cpplint.bzl", "cpplint")
 load(
     "//tools:drake.bzl",
     "drake_cc_googletest",
     "drake_cc_library",
 )
+load("//tools:lint.bzl", "add_lint_tests")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -40,4 +40,4 @@ drake_cc_library(
     ],
 )
 
-cpplint()
+add_lint_tests()
