Rework issues with transporting data into geometry state from sources
1. Removed the "remove id" functionality from FrameIdVector. it wasn't
   strictly necessary. I used it for tests but it shouldn't be part of
   the public API.
2. Tweaked doxygen and formatting (via clang format) for FrameIdVector.
3. Reworked the input port kinematics data -- inherits from std::vector.

--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -12,7 +12,10 @@ package(default_visibility = ["//visibility:public"])
 
 drake_cc_library(
     name = "frame_kinematics",
-    srcs = ["frame_id_vector.cc"],
+    srcs = [
+        "frame_id_vector.cc",
+        "frame_kinematics_vector.cc",
+    ],
     hdrs = [
         "frame_id_vector.h",
         "frame_kinematics_vector.h",
