--- a/drake/geometry/BUILD
+++ b/drake/geometry/BUILD
@@ -119,6 +119,7 @@ drake_cc_library(
         ":internal_frame",
         ":internal_geometry",
         "//drake/common",
+        "//drake/common:unused",
     ],
 )
 
